syntax = "proto3";
package chatserver;

service ChatServer {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse);
}

message CreateRoomRequest {
    string event_code = 1;
}

message CreateRoomResponse {
    bool successful = 1;
}
